add noticeCount method to DepartmentAPIController
